--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="description" content="Prêt pour redonner vie à votre projet ? Contactez La Chouette agence et parlez-nous de ce projet. Notre équipe aura le plaisir de vous contacter au plus vite et de commencer à le modeler selon vos besoins">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
    
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
