--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html> 
-<html lang="Default">
+<html lang="fr">
 <head>
-	<title>La Chouette Agence - Entreprise de Web Design à Lyon</title>
+	<title>La Chouette Agence - Agence de Web Design à Lyon</title>
    
 	<meta charset="utf-8">
     <meta name="description" content="La chouette agence est une entreprise de web design à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet">
@@ -33,7 +33,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt=" paris web design logo agence web meilleure agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de La chouette agence" height="40" /></a>
 				<!--<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>-->
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
@@ -53,9 +53,11 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
+				<img src="img/logo-la-chouette-agence.png" class="center-block image-resize-mode" width="100" alt="Logo de La chouette agence"/>
 				<h1 class="text-center hero-bloc-text tc-white ">
-					La chouette agence.
+					La chouette agence
+					<br>
+					Agence de web design basée à Lyon 
 				</h1>
 				<div class="text-center">
 					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -71,7 +73,9 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<h2>
+					La chouette agence est une agence de web design qui aide <br>les entreprises à devenir attractives et visibles sur Internet.
+				</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -111,8 +115,14 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+				<h2>
+					<em>
+					"La chouette agence est une excellente agence web !
+					Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer ànotre site.
+					Cela nous a aidé à doubler nos ventes en ligne à Lyon"
+					</em>
+				</h2>
+				<p>Maxime Guibard, PDG de à nos Fourchettes</p>
 			</div>
 		</div>
 	</div>
@@ -141,12 +151,16 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<h2>
+					Nous travaillons avec beaucoup de clients,<br> voici quelques-une de nos réalisations
+				</h2>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img/image-journaux.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+					<img src="img/image-journaux.jpg" alt="Image de journaux" class="img-responsive portfolio-thumb"/>
+				</a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -155,7 +169,9 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+				<a href="#" data-lightbox="img/image-photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+					<img src="img/image-photographe.jpg" alt="Image d'une photographe" class="img-responsive portfolio-thumb"/>
+				</a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -166,7 +182,9 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+				<a href="#" data-lightbox="img/image-materiel-voyage.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+					<img src="img/image-materiel-voyage.jpg" alt="Image de matériel de voyage" class="img-responsive portfolio-thumb"/>
+				</a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -175,7 +193,9 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+				<a href="#" data-lightbox="img/image-agence-mariage.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+					<img src="img/image-agence-mariage.jpg" alt="Image d'un bureau avec matériel de travail" class="img-responsive portfolio-thumb"/>
+				</a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
