--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,9 @@
     <meta charset="utf-8">
     <meta name="description" content="Prêt pour redonner vie à votre projet ? Contactez La Chouette agence et parlez-nous de ce projet. Notre équipe aura le plaisir de vous contacter au plus vite et de commencer à le modeler selon vos besoins">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-   
-	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<meta name="robots" content="index, follow">
+	
+	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
