--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	<meta charset="utf-8">
     <meta name="description" content="La chouette agence est une entreprise de web design à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="robots" content="index, follow">
 
-	<link rel="shortcut icon" type="image/png" href="favicon.jpg">    
+	<link rel="shortcut icon" type="image/ico" href="favicon.ico">    
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
@@ -21,10 +22,12 @@
     
 <!-- Analytics -->
  
-<!-- Analytics END -->
-    
+<!-- Analytics END -->  
+  
 </head>
+
 <body>
+
 <!-- Principal conteneur -->
 <div class="page-container">
 
