--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Prêt pour redonner vie à votre projet ? Contactez La Chouette agence et parlez-nous de ce projet. Notre équipe aura le plaisir de vous contacter au plus vite et de commencer à le modeler selon vos besoins">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
-	
+
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -118,7 +118,7 @@
 
 
 <!-- Footer - bloc-8 -->
-<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
@@ -128,29 +128,40 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="https://www.twitter.com" title="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="https://www.facebook.com" title="Facebook" target="_blank" rel="noreferrer noopener"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="https://www.dribbble.com" title="Dribble" target="_blank" rel="noreferrer noopener"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="https://www.instagram.com" title="Instagram" target="_blank" rel="noreferrer noopener"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-4">
+						Partenaires
+						<ul>
+							<li><a href="#" title="Mairie de Lyon" target="_blank" rel="noreferrer noopener">Mairie de Lyon</a></li>
+							<li><a href="#" title="Reservia" target="_blank" rel="noreferrer noopener">Reservia</a></li>
+							<li><a href="#" title="OhMyFood" target="_blank" rel="noreferrer noopener">OhMyFood</a></li>
+							<li><a href="#" title="Chouette Agence Immo" target="_blank" rel="noreferrer noopener">Chouette Agence Immo</a></li>
+						</ul>		
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </div>
