--- a/index.html
+++ b/index.html
@@ -13,12 +13,6 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
     
 <!-- Analytics -->
  
@@ -36,7 +30,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de La chouette agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="Logo de La chouette agence" height="40" /></a>
 				<!--<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>-->
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
@@ -56,7 +50,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo-la-chouette-agence.png" class="center-block image-resize-mode" width="100" alt="Logo de La chouette agence"/>
+				<img src="img/logo-la-chouette-agence.jpg" class="center-block image-resize-mode" width="100" alt="Logo de La chouette agence"/>
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence
 					<br>
@@ -272,10 +266,16 @@
 	</div>
 </footer>
 <!-- Footer - bloc-8 END -->
-
 </div>
 <!-- Principal conteneur END -->
-    
+ 
+<!-- JavaScript -->
+<script src="./js/jquery-2.1.0.js" defer></script>
+<script src="./js/bootstrap.js" defer></script>
+<script src="./js/blocs.js" defer></script>
+<script src="./js/jquery.touchSwipe.js" defer></script>
+<script src="./js/gmaps.js" defer></script>
+<!-- JavaScript END -->
 
 </body>
 </html>
