--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<meta name="robots" content="index, follow">
 
 	<link rel="shortcut icon" type="image/ico" href="favicon.ico">    
+	<link rel="canonical" href="https://marysau.github.io/MaryleneSaurat_4_16022021/"/>
+	
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
