--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
 <!-- Analytics -->
  
 <!-- Analytics END -->  
-
 </head>
 
 <body>
-
 <!-- Principal conteneur -->
 <div class="page-container">
 
 <!-- bloc-0 -->
-<div class="bloc bgc-white l-bloc " id="bloc-0">
+<header class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
@@ -38,22 +36,23 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li><a href="index.html">Accueil</a></li>
-					<li></li>
+					<li><a href="#bloc-2-services">Nos métiers</a></li>
+					<li><a href="#bloc-4-portfolio">Nos réalisations</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 		</nav>
 	</div>
-</div>
+</header>
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
-<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
 				<img src="img/logo-la-chouette-agence.jpg" class="center-block image-resize-mode" width="100" alt="Logo de La chouette agence"/>
-				<h1 class="text-center hero-bloc-text tc-white ">
+				<h1 class="text-center hero-bloc-text tc-yellow">
 					La chouette agence
 					<br>
 					Agence de web design basée à Lyon 
@@ -64,11 +63,11 @@
 			</div>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-1-presentation END -->
 
 <!-- bloc-2-services -->
-<div class="bloc bgc-white l-bloc" id="bloc-2-services">
+<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -125,28 +124,28 @@
 			</div>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
-<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
-				<h2 class="mg-md text-center tc-white">
+				<h2 class="mg-md text-center tc-yellow">
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 				</h2>
 				<p class="text-center white">
-					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="tc-yellow bold-link" href="page2.html">Contactez notre équipe</a><br>
 				</p>
 			</div>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-3-what-i-do END -->
 
 <!-- bloc-4-portfolio -->
-<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -158,7 +157,7 @@
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/image-journaux.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-					<img src="img/image-journaux.jpg" alt="Image de journaux" class="img-responsive portfolio-thumb"/>
+					<img src="img/image-journaux.jpg" alt="Image de journaux" loading="lazy" class="img-responsive portfolio-thumb"/>
 				</a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
@@ -169,7 +168,7 @@
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/image-photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-					<img src="img/image-photographe.jpg" alt="Image d'une photographe" class="img-responsive portfolio-thumb"/>
+					<img src="img/image-photographe.jpg" alt="Image d'une photographe" loading="lazy" class="img-responsive portfolio-thumb"/>
 				</a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
@@ -182,7 +181,7 @@
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/image-materiel-voyage.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-					<img src="img/image-materiel-voyage.jpg" alt="Image de matériel de voyage" class="img-responsive portfolio-thumb"/>
+					<img src="img/image-materiel-voyage.jpg" alt="Image de matériel de voyage" loading="lazy" class="img-responsive portfolio-thumb"/>
 				</a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
@@ -193,7 +192,7 @@
 			</div>
 			<div class="col-sm-6">
 				<a href="#" data-lightbox="img/image-agence-mariage.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-					<img src="img/image-agence-mariage.jpg" alt="Image d'un bureau avec matériel de travail" class="img-responsive portfolio-thumb"/>
+					<img src="img/image-agence-mariage.jpg" alt="Image d'un bureau avec matériel de travail" loading="lazy" class="img-responsive portfolio-thumb"/>
 				</a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
@@ -204,14 +203,14 @@
 			</div>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-4-portfolio END -->
 
 <!-- bloc-5-cta -->
-<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
 		<div class="row">
-			<h2 class="mg-md text-center tc-white">
+			<h2 class="mg-md text-center tc-yellow">
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
@@ -219,7 +218,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
@@ -227,7 +226,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<p class="text-center white bold">
 					La chouette agence - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
@@ -252,17 +251,29 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-sm-4">
-						Partenaires
-						<ul>
-							<li><a href="#" title="Mairie de Lyon" target="_blank" rel="noreferrer noopener">Mairie de Lyon</a></li>
-							<li><a href="#" title="Reservia" target="_blank" rel="noreferrer noopener">Reservia</a></li>
-							<li><a href="#" title="OhMyFood" target="_blank" rel="noreferrer noopener">OhMyFood</a></li>
-							<li><a href="#" title="Chouette Agence Immo" target="_blank" rel="noreferrer noopener">Chouette Agence Immo</a></li>
-						</ul>		
+			</div>
+			<!--<div class="row">-->
+			<div class="col-sm-12 ">
+				<p class="text-center white bold">
+					Partenaires
+				</p>
+				<div class="row row-no-gutters partenaire">
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="partenaire-a" href="#" title="Mairie de Lyon" target="_blank" rel="noreferrer noopener">Mairie de Lyon</a>
+						</div>
 					</div>
-				</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="partenaire-a" href="#" title="Reservia" target="_blank" rel="noreferrer noopener">Reservia</a>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="partenaire-a" href="#" title="OhMyFood" target="_blank" rel="noreferrer noopener">OhMyFood</a>
+						</div>
+					</div>
+				</div>	
 			</div>
 		</div>
 	</div>
