--- a/contact.html
+++ b/contact.html
@@ -116,45 +116,40 @@
 <!-- Footer - bloc-8 -->
 <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
-		<div class="row">
-			<div class="col-sm-12">
-				<p class="text-center white">
-					La chouette agence - Agence web basée à Lyon.<br>
-				</p>
-				<div class="row row-no-gutters social">
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="https://www.twitter.com" title="Twitter"><span class="fa fa-twitter icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="https://www.facebook.com" title="Facebook" target="_blank" rel="noreferrer noopener"><span class="fa fa-facebook icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="https://www.dribbble.com" title="Dribble" target="_blank" rel="noreferrer noopener"><span class="fa fa-dribbble icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="https://www.instagram.com" title="Instagram" target="_blank" rel="noreferrer noopener"><span class="fa fa-instagram icon-md"></span></a>
-						</div>
-					</div>
+		<div class="col-sm-12">
+			<p class="text-center white bold">
+				La chouette agence - Agence web basée à Lyon.<br>
+			</p>
+			<div class="row social">
+				<div class="col-sm-3 text-center">
+					<a class="social" href="https://www.twitter.com" title="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 				</div>
-				<div class="row">
-					<div class="col-sm-4">
-						Partenaires
-						<ul>
-							<li><a href="#" title="Mairie de Lyon" target="_blank" rel="noreferrer noopener">Mairie de Lyon</a></li>
-							<li><a href="#" title="Reservia" target="_blank" rel="noreferrer noopener">Reservia</a></li>
-							<li><a href="#" title="OhMyFood" target="_blank" rel="noreferrer noopener">OhMyFood</a></li>
-							<li><a href="#" title="Chouette Agence Immo" target="_blank" rel="noreferrer noopener">Chouette Agence Immo</a></li>
-						</ul>		
-					</div>
+				<div class="col-sm-3 text-center">
+					<a class="social" href="https://www.facebook.com" title="Facebook" target="_blank" rel="noreferrer noopener"><span class="fa fa-facebook icon-md"></span></a>
+				</div>
+				<div class="col-sm-3 text-center">
+					<a class="social" href="https://www.dribbble.com" title="Dribble" target="_blank" rel="noreferrer noopener"><span class="fa fa-dribbble icon-md"></span></a>
+				</div>
+				<div class="col-sm-3 text-center">
+					<a class="social" href="https://www.instagram.com" title="Instagram" target="_blank" rel="noreferrer noopener"><span class="fa fa-instagram icon-md"></span></a>
 				</div>
 			</div>
+		</div>
+		<div class="col-sm-12 ">
+			<p class="text-center white bold">
+				Partenaires
+			</p>
+			<div class="row partenaire">
+				<div class="col-sm-3 text-center">
+					<a class="partenaire-a" href="#" title="Mairie de Lyon" target="_blank" rel="noreferrer noopener">Mairie de Lyon</a>
+				</div>
+				<div class="col-sm-3 text-center">
+					<a class="partenaire-a" href="#" title="Reservia" target="_blank" rel="noreferrer noopener">Reservia</a>
+				</div>
+				<div class="col-sm-3 text-center">
+					<a class="partenaire-a" href="#" title="OhMyFood" target="_blank" rel="noreferrer noopener">OhMyFood</a>
+				</div>
+			</div>	
 		</div>
 	</div>
 </footer>
