--- a/index.html
+++ b/index.html
@@ -26,12 +26,17 @@
 <div class="page-container">
 
 <!-- bloc-0 -->
-<header class="bloc bgc-white l-bloc " id="bloc-0">
+<header class="bloc bgc-white l-bloc" id="bloc-0">
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="Logo de La chouette agence" height="40" /></a>
-				<!--<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>-->
+				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
@@ -53,7 +58,7 @@
 			<div class="col-sm-12">
 				<img src="img/logo-la-chouette-agence.jpg" class="center-block image-resize-mode" width="100" alt="Logo de La chouette agence"/>
 				<h1 class="text-center hero-bloc-text tc-yellow">
-					La chouette agence
+					<strong>La chouette agence</strong>
 					<br>
 					Agence de web design basée à Lyon 
 				</h1>
@@ -76,7 +81,7 @@
 				</h2>
 			</div>
 		</div>
-		<div class="row voffset-lg med-width-whitespace">
+		<div class="row med-width-whitespace">
 			<div class="col-sm-4">
 				<div class="text-center">
 					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
@@ -111,7 +116,7 @@
 				</p>
 			</div>
 		</div>
-		<div class="row voffset-lg voffset">
+		<div class="row voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 				<h2>
 					<em>
@@ -224,57 +229,40 @@
 <!-- Footer - bloc-8 -->
 <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
-		<div class="row">
-			<div class="col-sm-12">
-				<p class="text-center white bold">
-					La chouette agence - Agence web basée à Lyon.<br>
-				</p>
-				<div class="row row-no-gutters social">
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="https://www.twitter.com" title="Twitter"><span class="fa fa-twitter icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="https://www.facebook.com" title="Facebook" target="_blank" rel="noreferrer noopener"><span class="fa fa-facebook icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="https://www.dribbble.com" title="Dribble" target="_blank" rel="noreferrer noopener"><span class="fa fa-dribbble icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="https://www.instagram.com" title="Instagram" target="_blank" rel="noreferrer noopener"><span class="fa fa-instagram icon-md"></span></a>
-						</div>
-					</div>
+		<div class="col-sm-12">
+			<p class="text-center white bold">
+				La chouette agence - Agence web basée à Lyon.<br>
+			</p>
+			<div class="row social">
+				<div class="col-sm-3 text-center">
+					<a class="social" href="https://www.twitter.com" title="Twitter"><span class="fa fa-twitter icon-md"></span></a>
+				</div>
+				<div class="col-sm-3 text-center">
+					<a class="social" href="https://www.facebook.com" title="Facebook" target="_blank" rel="noreferrer noopener"><span class="fa fa-facebook icon-md"></span></a>
+				</div>
+				<div class="col-sm-3 text-center">
+					<a class="social" href="https://www.dribbble.com" title="Dribble" target="_blank" rel="noreferrer noopener"><span class="fa fa-dribbble icon-md"></span></a>
+				</div>
+				<div class="col-sm-3 text-center">
+					<a class="social" href="https://www.instagram.com" title="Instagram" target="_blank" rel="noreferrer noopener"><span class="fa fa-instagram icon-md"></span></a>
 				</div>
 			</div>
-			<!--<div class="row">-->
-			<div class="col-sm-12 ">
-				<p class="text-center white bold">
-					Partenaires
-				</p>
-				<div class="row row-no-gutters partenaire">
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="partenaire-a" href="#" title="Mairie de Lyon" target="_blank" rel="noreferrer noopener">Mairie de Lyon</a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="partenaire-a" href="#" title="Reservia" target="_blank" rel="noreferrer noopener">Reservia</a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="partenaire-a" href="#" title="OhMyFood" target="_blank" rel="noreferrer noopener">OhMyFood</a>
-						</div>
-					</div>
-				</div>	
-			</div>
+		</div>
+		<div class="col-sm-12 ">
+			<p class="text-center white bold">
+				Partenaires
+			</p>
+			<div class="row partenaire">
+				<div class="col-sm-3 text-center">
+					<a class="partenaire-a" href="#" title="Mairie de Lyon" target="_blank" rel="noreferrer noopener">Mairie de Lyon</a>
+				</div>
+				<div class="col-sm-3 text-center">
+					<a class="partenaire-a" href="#" title="Reservia" target="_blank" rel="noreferrer noopener">Reservia</a>
+				</div>
+				<div class="col-sm-3 text-center">
+					<a class="partenaire-a" href="#" title="OhMyFood" target="_blank" rel="noreferrer noopener">OhMyFood</a>
+				</div>
+			</div>	
 		</div>
 	</div>
 </footer>
