--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="Logo de La chouette agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="Logo de La chouette agence"/></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
@@ -56,7 +56,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo-la-chouette-agence.jpg" class="center-block image-resize-mode" width="100" alt="Logo de La chouette agence"/>
+				<img src="img/logo-la-chouette-agence.jpg" class="center-block image-resize-mode" alt="Logo de La chouette agence"/>
 				<h1 class="text-center hero-bloc-text tc-yellow">
 					<strong>La chouette agence</strong>
 					<br>
@@ -230,12 +230,12 @@
 <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="col-sm-12">
-			<p class="text-center white bold">
+			<p class="text-center black bold">
 				La chouette agence - Agence web basée à Lyon.<br>
 			</p>
 			<div class="row social">
 				<div class="col-sm-3 text-center">
-					<a class="social" href="https://www.twitter.com" title="Twitter"><span class="fa fa-twitter icon-md"></span></a>
+					<a class="social" href="https://www.twitter.com" title="Twitter" target="_blank" rel="noreferrer noopener"><span class="fa fa-twitter icon-md"></span></a>
 				</div>
 				<div class="col-sm-3 text-center">
 					<a class="social" href="https://www.facebook.com" title="Facebook" target="_blank" rel="noreferrer noopener"><span class="fa fa-facebook icon-md"></span></a>
@@ -249,7 +249,7 @@
 			</div>
 		</div>
 		<div class="col-sm-12 ">
-			<p class="text-center white bold">
+			<p class="text-center black bold">
 				Partenaires
 			</p>
 			<div class="row partenaire">
