--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,7 @@
 	<!--<div class="container bloc-sm">-->
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="Logo de La chouette agence"
-					/></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg" alt="Logo de La chouette agence" height="40" width="215"/></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
@@ -106,7 +105,7 @@
 					</button>
 				</form>
 			</div>
-			<div class="col-sm-6 nav-center">
+			<div class="col-sm-6 text-center">
 				<p>
 					contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
