--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
-<section class="bloc bloc-lg bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge loc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+<section class="bloc bloc-lg bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 	<!--<div class="container bloc-lg">-->
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
@@ -117,16 +117,16 @@
 			</div>
 		</div>
 		<div class="row voffset">
-			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<h2>
+			<blockquote class="blockquote col-xs-12 col-md-8 col-md-offset-2 text-center">
+				<h3>
 					<em>
 					"La chouette agence est une excellente agence web !
-					Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer ànotre site.
+					Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.
 					Cela nous a aidé à doubler nos ventes en ligne à Lyon"
 					</em>
-				</h2>
+				</h3>
 				<p>Maxime Guibard, PDG de à nos Fourchettes</p>
-			</div>
+			</blockquote>
 		</div>
 	<!--</div>-->
 </section>
